// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Warning matches snapshot when invisible 1`] = `
<div
  className="ui fluid card"
  data-test-id="requiredFieldPrompt"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#d45c64",
      "border": "none",
      "color": "white",
      "textAlign": "center",
      "visibility": "hidden",
    }
  }
>
  <div
    className="content"
  >
    Please complete all required fields
  </div>
</div>
`;

exports[`Warning matches snapshot when visible 1`] = `
<div
  className="ui fluid card"
  data-test-id="requiredFieldPrompt"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#d45c64",
      "border": "none",
      "color": "white",
      "textAlign": "center",
      "visibility": "visible",
    }
  }
>
  <div
    className="content"
  >
    Please complete all required fields
  </div>
</div>
`;
